# classno

./: .gitignore  BUG_REPORT.md  CLAUDE.md  LICENSE  PLAN.md  README.md  TODO.md  TODO_BUGFIX.md  pyproject.toml  ruff.toml  temp.py  test_bugs.py
classno/: __init__.py  _casting.py  _delattrs.py  _dunders.py  _errors.py  _feature_handlers.py  _fields.py  _getattrs.py  _hooks.py  _setattrs.py  _utils.py  _validation.py  base.py  constants.py  core.py  example.py  exceptions.py  root.py
docs/: settings-feature.md
examples/: copiyng.py  copying.py  immutable.py  inheritance.py  lossy_autocasting.py  nested.py  overrided_keys.py  pickling.py  private.py  simple.py  validated.py
scripts/: run_comprehensive_tests.sh  test_stats.py
tests/: README_TESTS.md  conftest.py  test_advanced_features.py  test_basic_functionality.py  test_complex_nested.py  test_comprehensive_scenarios.py  test_error_handling.py  test_immutable_frozen.py  test_inheritance.py  test_new_functionality.py  test_validation.py  test_working_features.py
tests/edge_cases/: __init__.py  test_nested_structures.py  test_optional_types.py  test_union_types.py
tests/integration/: __init__.py  test_feature_combinations.py  test_inheritance.py
tests/regression/: __init__.py  test_bug_fixes.py
tests/unit/: test_casting_edge_cases.py  test_casting_returns.py  test_collection_types.py  test_comparison_fix.py  test_core_functionality.py  test_dunder_methods.py  test_error_messages.py  test_exceptions.py  test_field_configuration.py  test_frozen_features.py  test_hashing.py  test_mutable_defaults.py  test_optional_validation.py  test_private_features.py  test_validation_edge_cases.py
