[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poe.env]
DIRS = "classno tests"

[tool.poe.tasks.pretty]
default_item_type = "cmd"
sequence = [
  "poetry run autoflake --in-place --verbose --recursive $DIRS",
  "poetry run black $DIRS",
  "poetry run isort $DIRS",
  "poetry run ruff check --fix $DIRS",
  "poetry run ruff format $DIRS",
  "poetry run toml-sort --in-place --all pyproject.toml"
]

[tool.poe.tasks.tests]
cmd = "poetry run pytest -vvv --cov=. --cov-report html"

[tool.poetry]
authors = ["kuderr <dakudryavcev@gmail.com>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Topic :: Software Development :: Libraries"
]
description = ""
keywords = ["library"]
license = "X11 License Distribution Modification Variant"
name = "classno"
readme = "README.md"
repository = "https://github.com/kuderr/classno"
version = "0.0.1"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.25.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
ruff = "^0.3.5"
toml-sort = "^0.23.1"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/kuderr/classno/issues"
"Homepage" = "https://github.com/kuderr/classno"
