[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poe.env]
DIRS = "classno tests examples"

[tool.poe.tasks.lint]
default_item_type = "cmd"
sequence = [
  "poetry run ruff check --no-fix $DIRS",
  "poetry run toml-sort --check pyproject.toml"
]

[tool.poe.tasks.pretty]
default_item_type = "cmd"
sequence = [
  "poetry run ruff check --fix $DIRS",
  "poetry run ruff format $DIRS",
  "poetry run toml-sort --in-place --all pyproject.toml"
]

[tool.poe.tasks.tests]
cmd = "poetry run pytest -vvv"

[tool.poe.tasks.test-unit]
cmd = "poetry run pytest tests/unit/ -v -m 'not slow'"

[tool.poe.tasks.test-integration]  
cmd = "poetry run pytest tests/integration/ -v"

[tool.poe.tasks.test-edge-cases]
cmd = "poetry run pytest tests/edge_cases/ -v"

[tool.poe.tasks.test-regression]
cmd = "poetry run pytest tests/regression/ -v"

[tool.poe.tasks.test-all]
cmd = "poetry run pytest tests/ --cov=classno --cov-report=html --cov-report=term-missing -v"

[tool.poe.tasks.test-fast]
cmd = "poetry run pytest tests/ -v -m 'not slow' --maxfail=5"

[tool.poe.tasks.coverage-report]
cmd = "poetry run pytest tests/ --cov=classno --cov-report=html --cov-report=term-missing --cov-fail-under=90"

[tool.poetry]
authors = ["kuderr <dakudryavcev@gmail.com>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Topic :: Software Development :: Libraries"
]
description = ""
keywords = ["library"]
license = "X11 License Distribution Modification Variant"
name = "classno"
readme = "README.md"
repository = "https://github.com/kuderr/classno"
version = "0.0.8"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.25.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
ruff = "^0.3.5"
toml-sort = "^0.23.1"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/kuderr/classno/issues"
"Homepage" = "https://github.com/kuderr/classno"

[tool.pyright]
typeCheckingMode = 'off'

[tool.pytest.ini_options]
addopts = "-ra --log-level=DEBUG --showlocals --verbose --cov=classno --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "edge_case: Edge case tests", 
    "regression: Regression tests",
    "slow: Slow-running tests"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]
